# cookiecutter-python

./: README.md  cookiecutter.json
hooks/: pre_gen_project.py
{{ cookiecutter.package_slug }}/: README.md  pyproject.toml
{{ cookiecutter.package_slug }}/src/{{ cookiecutter.package_slug }}/: __init__.py
{{ cookiecutter.package_slug }}/tests/: test_{{ cookiecutter.package_slug }}.py
