[tool.poetry]
name = "{{ cookiecutter.package_slug }}"
version = "{{ cookiecutter.package_version }}"
description = "{{ cookiecutter.package_short_description }}"
authors = ["{{ cookiecutter.author_name }}"]

[tool.poetry.dependencies]
python = "^{{ cookiecutter.python_version }}"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pylint = "^2.14.1"
flake8 = "^4.0.1"
black = "^22.3.0"
mypy = "^0.961"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py{{ cookiecutter.python_short_version }}"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
py_version = {{ cookiecutter.python_short_version }}